--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - "8600:8600/udp"  
     volumes:
       - /Users/garretmurray/JoplinBackup/Secrets_management/consul:/consul
+      - /Users/garretmurray/JoplinBackup/Secrets_management/consul/data:/consul/data
     command: ["consul", "agent", "-config-file=/consul/config/consul.hcl", "-config-dir=/consul/config"]
     healthcheck:  
       test: ["CMD", "curl", "-f", "http://127.0.0.1:8500/v1/status/leader"]  
@@ -28,15 +29,3 @@ services:
         condition: service_healthy
 
 
-  vault-transit-server:
-    image: hashicorp/vault:latest
-    ports:
-      - "8350:8350"
-    volumes:
-      - /Users/garretmurray/JoplinBackup/Secrets_management/transit-vault:/transit-vault
-    command: ["vault", "server", "-config=/transit-vault/config/transit-vault.hcl"]
-    cap_add:
-      - IPC_LOCK
-    depends_on:
-      consul-server:
-        condition: service_healthy
