Initial version of secrets management vault ready for use on local computer only.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       interval: 10s
       timeout: 10s
       retries: 5
-    restart: unless-stopped
+    restart: always
 
   vault-main-server:
     image: hashicorp/vault:latest
@@ -32,10 +32,7 @@ services:
       - "8200:8200"
     volumes:
       - ./main-vault:/vault
-      - ./main-vault/certs:/vault/config/certs
-      - ./main-vault/certs/vault.crt:/etc/certs/vault.crt
-      - ./main-vault/certs/vault.key:/etc/certs/vault.key
-      - ./main-vault/certs/vault-ca.crt:/etc/certs/vault-ca.crt
+      - ./main-vault/certs:/etc/certs
     command: ["vault", "server", "-config=/vault/config/vault-config.hcl"]
     cap_add:
       - IPC_LOCK
@@ -44,6 +41,5 @@ services:
         condition: service_healthy
     env_file: 
       - ./main-vault/.env
-    restart: unless-stopped
-
+    restart: always
 
