--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,18 @@
 *.DS_Store
+
+# Consul directory
 consul/data/
+consul/config/certs/
+consul/config/encrypt.key
+
+# Vault directory
+main-vault/certs/
+main-vault/config/policies/test.env
 main-vault/file/
 main-vault/logs/
+
+# All .env files
 **/*.env
-consul/config/encrypt.key
-main-vault/certs/
-consul/config/certs/
+
+
+
